# opsdesk-lite

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  REVIEWER_REPLAY.md  RUNBOOK.md
migrations/: 001_init.sql
scripts/: privacy_audit.py  reviewer_replay.py  smoke.py  support_diagnostics.py
src/opsdesk/: __init__.py  config.py  database.py  main.py  migrate.py  models.py  schemas.py  service.py  worker.py
tests/: conftest.py  test_contracts.py  test_diagnostics.py  test_metrics.py  test_outbox.py  test_tickets_api.py  test_worker.py
